f1endaal.nl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1endaal-nl
spec:
  selector:
    matchLabels:
      app: f1endaal-nl
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: f1endaal-nl
    spec:
      containers:
        - name: f1endaal-nl
          image: bitnami/wordpress
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: f1endaal-nl-storage
              mountPath: /var/www/html
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
      volumes:
        - name: f1endaal-nl-storage
          persistentVolumeClaim:
            claimName: f1endaal-nl-lh-pvc
