f1endaal.nl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1endaal-nl-service
spec:
  selector:
    app: f1endaal-nl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
